<resources>
    <string name="app_name">WaziPay</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="by_continuing">By continuing you agree to Our</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="and">And</string>
    <string name="terms">Terms</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>